# swarm-ui

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/archive/: architecture-plan.md  claude-initial-plan.md  oc-initial-plan.md  parallel-impl-plan.md  visibility-plan.md
patches/: ghostty-web@0.4.0.patch
scripts/: generate-ui-protocol-types.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bind.rs  daemon.rs  event_history.rs  events.rs  launch.rs  lib.rs  main.rs  mobile_access.rs  model.rs  pty.rs  swarm.rs  ui_commands.rs  ui_control.rs  worker_log.rs  writes.rs
src/edges/: ConnectionEdge.svelte
src/lib/: Markdown.svelte  eventFormat.ts  floatingEdge.ts  fullscreenContext.ts  graph.test.ts  graph.ts  messages.ts  mobileAccess.ts  tasks.test.ts  tasks.ts  terminal.ts  terminalSurface.ts  time.ts  types.ts  workspaceOverlay.ts
src/lib/app/: alignment.test.ts  alignment.ts  focus.ts  graphState.ts  layoutPersistence.ts  sidebar.ts  (+3 more)
src/nodes/: AlignmentGuide.svelte  NodeHeader.svelte  TerminalNode.svelte  TerminalPane.svelte  ViewportFocus.svelte
src/panels/: CloseConfirmModal.svelte  EventHistoryModal.svelte  FullscreenWorkspace.svelte  Inspector.svelte  Launcher.svelte  MobileAccessModal.svelte  PairingSessionModal.svelte  SettingsModal.svelte  SwarmStatus.svelte  WorkerLogViewer.svelte
src/stores/: agentWindowSettings.ts  appearance.ts  harnessAliases.ts  pty.ts  swarm.ts
src/styles/: terminal.css
